tdf#120877: make menu items checkable as needed

Change-Id: I5a07526aa5187313977d6f7c244541be83b5edbc
Reviewed-on: https://gerrit.libreoffice.org/65930
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>
(cherry picked from commit 4de638c14c0a74e29e213fd53cd01cad93285aa4)
Reviewed-on: https://gerrit.libreoffice.org/66747
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>